Navbar no longer moving and gap is closed :D

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,32 @@
     background-repeat: no-repeat;
     background-attachment: fixed;  
     background-size: cover;
+    margin-left:0px;
+    margin-right:0px;
   }
   .body-menu{
-    margin:0;
+    margin-top:8px;
+    margin-left:0px;
+    margin-right:0px;
     padding: 0;
     box-sizing: border-box;
     background-color: #FEFBF3;
     font-family: 'Playfair Display', serif;
+  }
+
+  .body-about {
+    margin-top:8px;
+    margin-left:0px;
+    margin-right:0px;
+  }
+
+  .body-contact {
+    background-color: #FEFBF3;
+    font-family: 'Playfair Display', serif;
+    margin-top:8px;
+    margin-left:0px;
+    margin-right:0px;
+    line-height: unset;
   }
 
   h1{
@@ -102,11 +121,12 @@ span{
   .navbar {
   overflow: hidden;
   background-color: #333;
-  position: fixed;
   display: flex;
   margin-top: 0;
   width: 100%;
   justify-content: center;
+  height: 47px;
+  align-content: center;
 }
 
 .navbar a {
@@ -119,6 +139,32 @@ span{
 }
 
 .navbar a:hover {
+  background: #fef;
+  color: tomato;
+}
+
+/* Had to duplicate navbar for contact due to bootstrap incompatibility - to ensure page consistency */
+.navbar-contact {
+  overflow: hidden;
+  background-color: #333;
+  display: flex;
+  margin-top: 0;
+  width: 100%;
+  justify-content: center;
+  height: 47px;
+}
+
+.navbar-contact a {
+  display: inline-block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 16px;
+  text-size-adjust: 0%;
+}
+
+.navbar-contact a:hover {
   background: #fef;
   color: tomato;
 }
@@ -139,11 +185,6 @@ input.send-message {
 }
 input.send-message:hover {
     background-color: transparent;
-}
-.body-contact {
-    background-color: #FEFBF3;
-    font-family: 'Playfair Display', serif;
-    margin:8px;
 }
 .myForm {
     margin: 0 3em 0 0;
@@ -305,4 +346,5 @@ article{
    vertical-align: middle;
    display: inline-block;
    }
+
 
